<resources>
    <string-array name="navigation_menu">
        <item>Earn Points</item>
        <item>Movies</item>
        <item>Musics</item>
        <item>Events</item>
        <item>Edutainments</item>
        <item>Series</item>
        <item>Tv Shows</item>
        <item>Live Channels</item>
    </string-array>
    <string-array name="ad_menu">
        <item>Retail</item>
        <item>Entertainment</item>
        <item>Luxury Goods</item>
        <item>Finance</item>
        <item>Food &amp; Beverages</item>
        <item>Automobile</item>
        <item>Service</item>
        <item>Fashion</item>
        <item>Technology</item>
        <item>Travel</item>
    </string-array>
    <string-array name="movies_menu">
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Kids</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Thriller</item>
    </string-array>
    <string-array name="edutainment_menu">
        <item>Academic</item>
        <item>Automotive</item>
        <item>Health</item>
        <item>Life Style</item>
        <item>Travel</item>
        <item>Photography</item>
        <item>Cooking</item>
    </string-array>
    <string-array name="event_menu">
        <item>Indonesia Super League</item>
        <item>Sport</item>
        <item>Music Concert</item>
        <item>Drama</item>
        <item>Festival</item>
        <item>Family</item>
        <item>Seminar</item>
    </string-array>
    <string-array name="navigation_tab">
        <item>MOVIES</item>
        <item>EDUTAINMENT</item>
        <item>EVENT</item>
    </string-array>
    <string-array name="discover_tab">
        <item>LATEST</item>
        <item>POPULAR</item>
        <item>FREE</item>
        <item>UPCOMING</item>
    </string-array>
    <string-array name="search_tab">
        <item>MOVIES</item>
        <item>EVENT</item>
        <item>EDUTAINMENT</item>
        <item>TV SHOW</item>
        <item>LIVE CHANNEL</item>
        <item>SERIAL</item>
        <item>AD</item>
    </string-array>
    <string-array name="category_ad">
        <item>LATEST</item>
        <item>POPULAR</item>
    </string-array>
    <string-array name="category_movie">
        <item>LATEST</item>
        <item>POPULAR</item>
        <item>PREMIUM</item>
        <item>FREE</item>
        <item>UPCOMING</item>
    </string-array>
    <string-array name="category_event">
        <item>LATEST</item>
        <item>POPULAR</item>
    </string-array>
    <string-array name="category_edutainment">
        <item>LATEST</item>
        <item>POPULAR</item>
    </string-array>
    <string-array name="category_tv_show">
        <item>LATEST</item>
        <item>POPULAR</item>
    </string-array>
    <string-array name="category_live_channel">
        <item>LATEST</item>
        <item>POPULAR</item>
    </string-array>
    <string-array name="category_series">
        <item>LATEST</item>
        <item>POPULAR</item>
    </string-array>
    <string-array name="movie_category_tab">
        <item>GENRE</item>
        <item>LATEST</item>
        <item>UPCOMING</item>
    </string-array>
    <string-array name="movie_tab">
        <item>DETAILS</item>
        <item>REVIEWS</item>
        <item>RELATEDS</item>
    </string-array>
    <string-array name="edutainment_category_tab">
        <item>CATEGORY</item>
        <item>POPULAR</item>
        <item>WATCHLIST</item>
    </string-array>
    <string-array name="edutainment_tab">
        <item>DETAILS</item>
        <item>REVIEWS</item>
        <item>RELATEDS</item>
    </string-array>
    <string-array name="event_tab">
        <item>DETAILS</item>
        <item>REVIEWS</item>
        <item>RELATEDS</item>
    </string-array>
    <string-array name="tv_show_tab">
        <item>DETAILS</item>
        <item>REVIEWS</item>
        <item>RELATEDS</item>
    </string-array>
    <string-array name="serial_tab">
        <item>DETAILS</item>
        <item>REVIEWS</item>
        <item>RELATEDS</item>
    </string-array>
    <string-array name="event_category_tab">
        <item>CATEGORY</item>
        <item>LIVE</item>
        <item>UPCOMING</item>
    </string-array>
    <string-array name="event_list_tab">
        <item>LIVE</item>
        <item>UPCOMING</item>
        <item>ARCHIVE</item>
    </string-array>
    <string-array name="sign_tab">
        <item>LOGIN</item>
        <item>REGISTER</item>
    </string-array>
    <string name="app_name">Nomad</string>
    <string name="watchlist">WATCH LIST</string>
    <string name="watch">WATCH</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="synopsis_genre">Genre</string>
    <string name="synopsis_release">Release</string>
    <string name="synopsis_director">Director</string>
    <string name="synopsis_cast">Cast</string>
    <string name="synopsis_runtime">Run Time</string>
    <string name="synopsis_language">Language</string>
    <string name="synopsis_subtitle">Subtitle</string>
    <string name="minutes">%1$d minutes</string>
    <string name="send">send</string>
    <string name="hint_comment"><i>write a review</i></string>
    <string name="edutainment">Edutainments</string>
    <string name="ad">Ads</string>
    <string name="movies">Movies</string>
    <string name="event">Events</string>
    <string name="live">LIVE </string>
    <string name="search">Search</string>
    <string name="share">SHARE</string>
    <string name="latest">LATEST</string>
    <string name="oldest">OLDEST</string>
    <string name="popular">POPULAR</string>
    <string name="alphabetical">ALPHABETICAL</string>
    <string name="email">Email</string>
    <string name="hint_email">YOUR EMAIL</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="hint_password">YOUR PASSWORD</string>
    <string name="toa">By using NOMAD, you agree to\n<b>Privacy Policy</b> and <b>Term of Service</b></string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="hint_login_email">YOUR EMAIL</string>
    <string name="hint_username">CREATE USERNAME</string>
    <string name="hint_register_email">ENTER EMAIL</string>
    <string name="hint_register_password">CREATE PASSWORD</string>
    <string name="hint_register_password_confirmation">PASSWORD CONFIRMATION</string>
    <string name="title_option">MORE</string>
    <string name="more_option">More Option</string>
    <string name="menu_etc">Etc</string>
    <string name="edit_username">Edit Username</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="set_password">Set Password</string>
    <string name="logout">Logout</string>
    <string name="about">About NOMAD</string>
    <string name="help_guides"><![CDATA[Help & Guides]]></string>
    <string name="suggest">Suggest Something</string>
    <string name="share_app">Share this app</string>
    <string name="rate_experience">Rate your experience</string>
    <string name="app_version">App version</string>
    <string name="auto_play">Auto play movie</string>
    <string name="push_notif">Push Notification</string>
    <string name="clear_content_cache">Clear content cache</string>
    <string name="edit_cover">Edit Cover</string>
    <string name="header_nomad_point">Buy <b>NP</b></string>
    <string name="free_nomad_point">Free Nomad Point</string>
    <string name="title_free_nomad">FREE NOMAD POINT</string>
    <string name="points">Points</string>
    <string name="downloading">"Downloading "</string>
    <string name="processing">"Processing "</string>
    <string name="share_nomad">I\'m watching %1$s using nomad apps</string>
    <string name="send_to">Share Nomad</string>
    <string name="error_register_title">Register Error</string>
    <string name="error_login_title">Login Error</string>
    <string name="error_login_content">Invalid username or password</string>
    <string name="in_movies">in movies</string>
    <string name="in_edutainments">in edutainments</string>
    <string name="in_event">in event</string>
    <string name="in_tv_show">in tv show</string>
    <string name="in_live_channel">in live channel</string>
    <string name="new_email">NEW EMAIL</string>
    <string name="password_caps">PASSWORD</string>
    <string name="existing_password_caps">EXISTING PASSWORD</string>
    <string name="save">save</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="new_password_confirmation">PASSWORD CONFIRMATION</string>
    <string name="change_username">Change Username</string>
    <string name="synopsis">synopsis</string>
    <string name="information">information</string>
    <string name="double_dot">:</string>
    <string name="trailers">trailers</string>
    <string name="write_your_review">Write your review</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="tap_a_star_to_rate">you rated it</string>
    <string name="max_review">400</string>
    <string name="discover">Discover</string>
    <string name="clear">clear</string>
    <string name="recently_search">Recently Search</string>
    <string name="total_search">%1$s Result for \'%2$s\'</string>
    <string name="buy_nomad_points">BUY NOMAD POINTS</string>
    <string name="earn_nomad_points">EARN NOMAD POINTS</string>
    <string name="daily_nomad_points">DAILY NOMAD POINTS</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="favorites">Favorites</string>
    <string name="collections">Collections</string>
    <string name="nomad_id">nomad.id</string>
    <string name="nomad">nomad</string>
    <string name="about_us">about us</string>
    <string name="help_and_guide">help &amp; guide</string>
    <string name="give_feedback">give feedback</string>
    <string name="rate_your_experience">rate your experience</string>
    <string name="member_login">Member login</string>
    <string name="lets_watch">Let\'s watch!</string>
    <string name="intro_description">Discover the most EPIC entertainment experience ever! Watch your favorite movie and TV shows at your finger tips</string>
    <string name="or">or</string>
    <string name="dialog_title_forgot_password">Forgot Your Password?</string>
    <string name="earn_point">Earn Point</string>
    <string name="dialog_title_buy">Choose rent package</string>
    <string name="buy">buy</string>
    <string name="free">Free</string>
    <string name="free_caps">FREE</string>
    <string name="ads_sub">watch to earn points</string>
    <string name="error_not_login">you need to login first</string>
    <string name="tv_show">TV Shows</string>
    <string name="exit_dialog">Press back again to leave</string>
    <string name="no_result">No Result Found</string>
    <string name="rented">rented - for %1$s days</string>
    <string name="live_channel">Live Channels</string>
    <string name="still_download">Still downloading other video</string>
    <string name="error_token_title">session expired, please relogin</string>
    <string name="error_token_content">You will be forced to log out</string>
    <string name="new_username">NEW USERNAME</string>
    <string name="resend_detail">You need to verify your email before proceed, by click the link we sent into your email. Please click resend email if you are not accept the email</string>
    <string name="resend_email_confirmation">resend email</string>
</resources>