<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_list_height"
        android:scaleType="matrix"
        android:src="@drawable/background_splash" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/movie_list_height">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/edit_cover"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:id="@+id/change_username_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/edit_username"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:id="@+id/change_email_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/change_email"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:id="@+id/change_password_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/change_password"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/logout"
                    app:typeface="RobotoCondensed-Regular.ttf" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/about"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/help_guides"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/suggest"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/share_app"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/rate_experience"
                    app:typeface="RobotoCondensed-Regular.ttf" />

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/app_version"
                    app:typeface="RobotoCondensed-Regular.ttf" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:orientation="horizontal">

                    <com.ctrlplusz.anytextview.AnyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/auto_play"
                        app:typeface="RobotoCondensed-Regular.ttf" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:orientation="horizontal">

                    <com.ctrlplusz.anytextview.AnyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/push_notif"
                        app:typeface="RobotoCondensed-Regular.ttf" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <com.ctrlplusz.anytextview.AnyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/clear_content_cache"
                    app:typeface="RobotoCondensed-Regular.ttf" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>