<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical">

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/change_username"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:typeface="RobotoCondensed-Regular.ttf" />

        <com.ctrlplusz.anytextview.AnyEditTextView
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_username"
            android:inputType="text"
            app:typeface="RobotoCondensed-Regular.ttf" />

        <com.ctrlplusz.anytextview.AnyEditTextView
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_caps"
            android:inputType="textPassword"
            app:typeface="RobotoCondensed-Regular.ttf" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.ctrlplusz.anytextview.AnyButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:typeface="RobotoCondensed-Regular.ttf" />

        <com.ctrlplusz.anytextview.AnyButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/save"
            android:textAllCaps="true"
            app:typeface="RobotoCondensed-Regular.ttf" />
    </LinearLayout>
</LinearLayout>