<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium">

                <ImageView
                    android:id="@+id/facebook_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_xx_small"
                    android:layout_weight="1"
                    android:background="@drawable/background_round_border_facebook"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/ic_facebook" />

            </LinearLayout>

            <include
                layout="@layout/separator_or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small" />

            <com.ctrlplusz.anytextview.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/email"
                app:typeface="RobotoCondensed-Regular.ttf" />

            <com.ctrlplusz.anytextview.AnyEditTextView
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/hint_register_email"
                android:inputType="textEmailAddress"
                app:typeface="RobotoCondensed-Regular.ttf" />

            <com.ctrlplusz.anytextview.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/password"
                app:typeface="RobotoCondensed-Regular.ttf" />

            <com.ctrlplusz.anytextview.AnyEditTextView
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/hint_register_password"
                android:inputType="textPassword"
                app:typeface="RobotoCondensed-Regular.ttf" />


            <com.ctrlplusz.anytextview.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/password_confirmation"
                app:typeface="RobotoCondensed-Regular.ttf" />

            <com.ctrlplusz.anytextview.AnyEditTextView
                android:id="@+id/password_confirmation_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/hint_register_password_confirmation"
                android:inputType="textPassword"
                app:typeface="RobotoCondensed-Regular.ttf" />

            <com.ctrlplusz.anytextview.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/toa"
                app:typeface="RobotoCondensed-Regular.ttf" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:layout_weight="0">

        <com.ctrlplusz.anytextview.AnyButton
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/default_ripple_red"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            app:typeface="RobotoCondensed-Regular.ttf" />

        <com.ctrlplusz.anytextview.AnyButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/default_ripple_gray"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            app:typeface="RobotoCondensed-Regular.ttf" />
    </LinearLayout>
</LinearLayout>