<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical">

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/resend_detail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:typeface="RobotoCondensed-Regular.ttf" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.ctrlplusz.anytextview.AnyButton
            android:id="@+id/resend_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/resend_email_confirmation"
            android:textAllCaps="true"
            app:typeface="RobotoCondensed-Regular.ttf" />

        <com.ctrlplusz.anytextview.AnyButton
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/ok"
            android:textAllCaps="true"
            app:typeface="RobotoCondensed-Regular.ttf" />
    </LinearLayout>
</LinearLayout>